fix(ui): custom scrollbars

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -63,7 +63,7 @@ input[type='number']::-webkit-inner-spin-button {
   --w-desk: calc(100vw - var(--w-sidebar));
   --w-desk-fixed: calc(var(--w-app) - var(--w-sidebar));
   --w-quick-edit: 22rem;
-  --w-scrollbar: 0.5rem;
+  --w-scrollbar: 0.6rem;
 
   /* Row Heights */
   --h-row-smallest: 2rem;
@@ -122,4 +122,25 @@ input[type='number']::-webkit-inner-spin-button {
   margin-left: -0.875rem;
   vertical-align: -3px;
   @apply text-red-500;
+}
+
+.custom-scroll::-webkit-scrollbar {
+  width: var(--w-scrollbar);
+  height: var(--w-scrollbar);
+}
+
+.custom-scroll::-webkit-scrollbar-track:vertical {
+  border-left: solid 1px theme('colors.gray.200');
+}
+
+.custom-scroll::-webkit-scrollbar-track:horizontal {
+  border-top: solid 1px theme('colors.gray.200');
+}
+
+.custom-scroll::-webkit-scrollbar-thumb {
+  background: theme('colors.gray.200');
+}
+
+.custom-scroll::-webkit-scrollbar-thumb:hover {
+  background: theme('colors.gray.400');
 }
